# Laboratorios/lab-api-001/validators/items.js
@@ -1,0 +1,10 @@
+const Joi = require('joi');
+
+exports.createItemSchema = Joi.object({
+    nombre: Joi.string().required(),
+    descripcion: Joi.string().required(),
+    categoria: Joi.number().integer().required(),
+    condicion: Joi.number().integer().required(),
+    provincia: Joi.number().integer().required(),
+    foto: Joi.string().uri().required()
+});
